--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <title>Titulo del blog</title>
 </head>
 <body>
-    <h1>Soy una mierda</h1>
-    <p>Hola, si</p>
+    <h1>Hola, si</h1>
+    <p>El barca </p>
 </body>
 </html>
